--- a/Cab_booking/src/main/resources/application.properties
+++ b/Cab_booking/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 
+server.port=8080
+
+#db specific properties
+spring.datasource.url=jdbc:mysql://localhost:3306/sb201db
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=ramsinha@32
+
+#ORM s/w specific properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+
