--- a/Cab_booking/src/main/resources/application.properties
+++ b/Cab_booking/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/sb201db
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=ramsinha@32
+spring.datasource.password=root
 
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
