--- a/Cab_booking/src/main/resources/application.properties
+++ b/Cab_booking/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-server.port=8080
+server.port=8083
 
 #db specific properties
 spring.datasource.url=jdbc:mysql://localhost:3306/sb201db
@@ -14,5 +14,5 @@ spring.jpa.show-sql=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
-spring.mvc.pathmatch.matching-strategy= ANT_PATH_MATCHER
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
