--- a/Cab_booking/src/main/resources/application.properties
+++ b/Cab_booking/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 
-server.port=8080
+server.port=8888
 
 #db specific properties
 spring.datasource.url=jdbc:mysql://localhost:3306/sb201db
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=ramsinha@32
+spring.datasource.password=goosebumps7
 
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
