--- a/Cab_booking/src/main/resources/application.properties
+++ b/Cab_booking/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sb201db
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 
-spring.datasource.password=Dinesh@8421643738
+spring.datasource.password=goosebumps7
 
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
