--- a/Cab_booking/src/main/resources/application.properties
+++ b/Cab_booking/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 
-
 #changing the server port
 server.port=8888
 
@@ -9,7 +8,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sb201db
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 
-spring.datasource.password=goosebumps7
+spring.datasource.password=ramsinha@32
 
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
